# YOLO-World-TensorRT-CPP

./: .gitignore  CMakeLists.txt  README.md  index.html
include/: data_types.h  detector_postprocessor.h  image_preprocessor.h  prompt_detector.h  text_preprocessor.h  tokenizer.h
src/: detector_postprocessor.cpp  image_preprocessor.cpp  main.cpp  prompt_detector.cpp  server.cpp  text_preprocessor.cpp  tokenizer.cpp
test/: CMakeLists.txt
test/src/: test_image_preprocessor.cpp  test_text_preprocessor.cpp
